[gd_scene load_steps=3 format=3 uid="uid://bodebpdwwrnk2"]

[ext_resource type="Theme" uid="uid://bh1sqvwywqmho" path="res://main_theme.tres" id="1_icv2g"]
[ext_resource type="Script" uid="uid://40ga8bd7oyjk" path="res://Scripts/settings_menu.gd" id="2_8ef0u"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_icv2g")
script = ExtResource("2_8ef0u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.25
offset_top = -52.0
offset_right = 404.25
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VolumeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SensLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Mouse Sensitivity"

[node name="SensSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = 187.0
offset_right = 129.5
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
text = "save"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SensSlider" to="." method="_on_sens_slider_value_changed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
